<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".starting.LoginActivity"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/imgLogoLogin"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:src="@drawable/logos"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="TODO" />
    <LinearLayout
        android:layout_below="@id/imgLogoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/edtEmailLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"
                 />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/tvForgotPasswordLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/btnLogin"
        android:gravity="center"
        android:padding="20dp"
        android:layout_below="@id/tvForgotPasswordLog"
        tools:ignore="NotSibling">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/don_t_have_an_account"
            />
        <TextView
            android:id="@+id/tvSignUpLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/sign_up"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/log_in"
        android:textAllCaps="true"
        android:padding="20dp"
        android:textStyle="bold"
        android:background="@color/buttonsBg"
        android:textColor="@android:color/white"
        />
    <ProgressBar
        android:id="@+id/progress_circularLog"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>